--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
    padding: 0;     
    box-sizing: border-box;  }
 body{
-   background:linear-gradient(27deg,#4e115c,#0f3174);
+   background: linear-gradient(27deg, #530b76, #25113b);
    background-repeat: no-repeat; 
        min-height: 100vh;
    }
     .container{
    margin:80px auto 170px;
    display: flex;
-   background-color: #f4f0f575;
+   background-color: #160628;
    padding: 4vh;
    height: 48vh;
    width: 20rem;
-   padding-top: 5vh;
+   padding-top: 4vh;
    flex-direction: column;
    flex-wrap: column;
    max-width:740px ;
    backdrop-filter:blur(50px);
    border-radius: 20px;
+   border-bottom: 5px solid #bc15f4;
     }
 #textarea{
    height: 37vh;
@@ -34,36 +35,57 @@ body{
    margin-bottom: 8px;   
    max-width:700px ;
    margin-top:8px;
-   background-color:#d0dcfb;   }
+   background-color:#341c4f;
+   border-radius: 15px;
+   border: 2px solid #079597; 
+   overflow: hidden;
+   resize: none;
+ }
 #row{
-   width:275px; }
+   width:275px; 
+}
    #voice{
    float: right;
    height:35px;
    position:relative;
-   border-radius: 25px;
+   margin-top: 5px;
+   border-radius: 10px;
    border:none;
    width:80px; 
-   background-color: ghostwhite;
+   background-color: #bc15f4eb;
+   border-bottom: 5px solid #ffef37f2;
+   color: #ffef37;
+
    }
 #tyvoice{
+   margin-top: 5px;
    width:150px;
    height:35px;
-   border-radius: 25px;
+   border-radius: 10px;
    border:none;
+   border-bottom:5px solid #ffe53d ;
    right: 5vh;  
    width:180px; 
-   background-color: ghostwhite;
+   background-color: #bc15f4;
+   color: #ffef37;
+   padding: 5px;
     }
 #h{
     align-items :center;
     padding-left:8px;
-    color:white;
+    color:#a79135;
     }
 @media (min-width:768px) and (max-width:1280px) {
-    *{
-      box-sizing: unset;
-}}
+      .container{
+         width: 22rem;
+        height: 48vh;
+        padding: 20px;
+        padding-top: 25px;
+      }
+      #textarea{
+         width: 20rem;
+      }
+       }
 </style>
 </head>
 <body>
